--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,8 @@ body {
 }
 
 :root {
-  --dark-gray: #2D2F31;
+  --blue: #166EE1;
+  --dark-gray: #333;
   --gray: #D0D0D0;
   --light-gray: #FAFAFA;
   --red: #E32B2B;
@@ -150,6 +151,7 @@ footer h3 {
   }
 
   .form_button {
+    gap: 1rem;
     margin-left: auto;
     margin-right: auto;
   }
