--- a/styles/stylesHome.css
+++ b/styles/stylesHome.css
@@ -1,91 +1,85 @@
 /** Estilos Generales **/
 
-  /* body {
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-blend-mode: multiply;
-    display: flex;
-    flex-direction: column;
-    font-family: "poppins",sans-serif;
-  } */
-  
-#home-section {
-    background-color: rgba(106, 141, 163, 0.7);
+h1 {
+  font-family: "poppins",sans-serif;
+  font-size: 2rem;
+  text-align: justify;
+  color: #f2f2f2;
 }
 
-  h1 {
- font-family: "poppins",sans-serif;
- font-size: 2rem;
- text-align: justify;
- color: #f2f2f2;
- 
-
-  }
-
- h2, h3 {
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-size: large;
-color: #f2f2f2;
-
-  }
+h2, h3 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: large;
+  color: #f2f2f2;
+}
 
 .header-home {
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
-    padding: 10px;
-    height: 50px;
-    width: 100%;
-    position: 0;
-    top: 0%;
-    background: white;
-    text-align: center;
-   
-  }
+  padding: 10px;
+  height: 50px;
+  width: 100%;
+  position: 0;
+  top: 0%;
+  background: white;
+  text-align: center;
+}
 
-  nav{
+nav{
 
-    display: inline-block;
-    text-align: right;
-    color: #f2f2f2;
-  }
+  display: inline-block;
+  text-align: right;
+  color: #f2f2f2;
+}
 
-<<<<<<< HEAD
-=======
-  .home-lista {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    padding: 0, 40px;
-    position: relative;
-    color: white;
+.main {
+  background-color: rgba(106, 141, 163, 0.7);
+}
 
+.main section {
+  max-width: 1150px;
+  margin: auto;
+}
 
+.main__picture {
+  max-width: 100%;
+}
 
-  }
+.main__picture img {
+  width: 100%;
+  object-fit: cover;
+}
 
->>>>>>> main
-  img{
-display: flex;
+.optionList-section {
+  display: flex;
+  gap: 1rem;
+  margin-top: 2rem!important;
+}
 
-  }
+.optionList-section article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .main_picture {
-    width: 80%;
-    height: 80%;
-   
+.optionList-section article img {
+  object-fit: cover;
+}
 
-  }
+footer {
+  text-align: center;
+  padding: 10px;
+  height: 50px;
+  width: 100%;
+  position: 0;
 
-  footer {
-    text-align: center;
-    padding: 10px;
-    height: 50px;
-    width: 100%;
-    position: 0;
-
+}
+  
+@media screen and (max-width: 768px) {
+  .main {
+    padding: 0 1rem;
   }
   
+  .optionList-section { 
+    flex-direction: column;
+  }
+}
   
