--- a/styles/stylesHome.css
+++ b/styles/stylesHome.css
@@ -31,12 +31,20 @@ nav{
 }
 
 .main {
-  background-color: rgba(106, 141, 163, 0.7);
+  background-color: var(--color-background);
 }
 
 .main section {
   max-width: 1150px;
   margin: auto;
+}
+
+.wrap-home-section h1 {
+  color: var(--black);
+}
+
+.wrap-home-section h2 {
+  color: var(--dark-gray);
 }
 
 .main__picture {
@@ -50,27 +58,53 @@ nav{
 
 .optionList-section {
   display: flex;
-  gap: 1rem;
+  gap: 3rem;
   margin-top: 2rem!important;
+  flex-wrap: wrap;
 }
 
 .optionList-section article {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--white);
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .161);
+  width: 250px;
+}
+
+.article_text {
+  padding: 10px;
+}
+
+.article_text h3 {
+  font-weight: bold;
+  color: var(--black);
+  text-align: center;
 }
 
 .optionList-section article img {
   object-fit: cover;
+  border-radius: 10px 10px 0 0 ;
 }
 
-footer {
-  text-align: center;
-  padding: 10px;
-  height: 50px;
-  width: 100%;
-  position: 0;
+.loader-container {
+  min-height: 380px;
+  align-items: center;
+  justify-content: center;
+  display: none
+}
 
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid var(--dark-gray);
+  border-left: 16px solid var(--dark-gray);
+  border-bottom: 16px solid var(--dark-gray);
+  width: 35px;
+  height: 35px;
+  animation: spin 2s linear infinite;
+  display: none; /* Oculto por defecto */
 }
   
 @media screen and (max-width: 768px) {
@@ -80,6 +114,12 @@ footer {
   
   .optionList-section { 
     flex-direction: column;
+    align-items: center;
+    gap: 2rem
   }
 }
   
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
